# matxin-kaz-eng

./: Makefile.am  README  configure.ac  matxin-kaz-eng.bilingual_mur.xml  matxin-kaz-eng.kaz-eng.dix  matxin-kaz-eng.kaz-eng.l1x  matxin-kaz-eng.kaz-eng.t1x  matxin-kaz-eng.kaz-eng.transfer  matxin-kaz-eng.transfer.xml  modes.xml
texts/: story.kaz.matxin
